--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,10 +24,7 @@ jobs:
       - name: Make staging directory
         run: mkdir staging
 
-      - name: Gluon License
-        uses: gluonhq/gluon-build-license@v1
-        with:
-          gluon-license: ${{ secrets.GLUON_LICENSE }}
+   
 
       - name: Gluon Build and Package
         shell: cmd
@@ -35,8 +32,8 @@ jobs:
 
       - name: Copy native bundles to staging
         run: |
-          cp -r target/gluonfx/x86_64-windows/HelloGluon.exe staging
-          cp -r target/gluonfx/x86_64-windows/HelloGluon-1.0.msi staging
+          cp -r target/jmcmx/jmcmx.exe staging
+          cp -r target/jmcmx/jmcmx-1.0.msi staging
 
       - name: Upload
         uses: actions/upload-artifact@v2
